[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.149", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full"] }
warp = "0.3.3"
